0.3.4, WIP:
  - ASTRA plugin:
    - rewrote .read_states() to accomodate for any zphase (simple trick);
    - added warning to helptext about .clean() possibly overwriting unsaved runfiles

  - Tracking presets:
    - default now takes beam states every 0.01 m, assuming field 2 m wide @ z = 1m (particles immediately fly into the field);
      track 1 m afterwards, i.e. focal length of up to 2 m
    - added "mono" beam preset - a smaller (100) line with spread in z-direction (i.e. flying carpet);
      the additional spread provides for much better spatial resolution in z

  - track module:
    - rewrote .process_states() to be slightly faster
    - switched from own contraption to np.arctan2() for phase calculation; changed the whole phase business around a bit in general
    - .process_states() now adds dphi information (relative to starting beam state ("turn") and to the previous state ("dphi")) to each state
    - .process_states() now adds z, pz and t from reference particles to the rest, eliminating the need for a separate "refs" object
    - added make_heads() that gets some general statistics for individual states


  - core module:
    - Can now feed field samples and describe them (approximately) with interpolation; runs seamlessly.
    - Renamed calc.py into core.py, for less confusion
    - added a thin wrapper for scipy.curve_fit

  - General:
    - Added some code to wrapper to streamline binding various modules to each other; since nothing will invoke the backend going around the interfaces (wrapper, at least),
      it is safe to not declare these connections explicitly and use "undefined" objects in backend code.
    - import pandas by default, it's as useful as plt or np


0.3.3, 15.09.20:
  - General:
    - separated demos and BA-relevant routines; I want to make a clear distinction between solensim and my thesis work.

  - ASTRA plugin:
    - renamed .get_field() to .read_field()