@@ -1,100 +1,100 @@
   0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00  3.4736E+06  0.0000E+00 -1.6022E-10   1   5
- -1.4875E-02  0.0000E+00 -5.2231E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.2774E-02  0.0000E+00 -1.7058E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.0673E-02  0.0000E+00  1.8114E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -8.5713E-03  0.0000E+00  5.3286E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -6.4700E-03  0.0000E+00 -8.0369E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -4.3687E-03  0.0000E+00 -4.5196E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -2.2673E-03  0.0000E+00 -1.0024E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.6599E-04  0.0000E+00  2.5148E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.9354E-03  0.0000E+00  6.0321E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  4.0367E-03  0.0000E+00 -7.3334E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  6.1380E-03  0.0000E+00 -3.8162E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  8.2394E-03  0.0000E+00 -2.9896E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.0341E-02  0.0000E+00  3.2183E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.2442E-02  0.0000E+00  6.7355E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.4543E-02  0.0000E+00 -6.6300E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.6645E-02  0.0000E+00 -3.1127E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.6853E-02  0.0000E+00  4.0449E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.4752E-02  0.0000E+00  3.9217E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.2650E-02  0.0000E+00  7.4389E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.0549E-02  0.0000E+00 -5.9265E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -8.4477E-03  0.0000E+00 -2.4093E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -6.3464E-03  0.0000E+00  1.1079E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -4.2451E-03  0.0000E+00  4.6252E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -2.1437E-03  0.0000E+00  8.1424E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -4.2377E-05  0.0000E+00 -8.5996E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  2.0590E-03  0.0000E+00 -5.0824E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  4.1603E-03  0.0000E+00 -1.5652E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  6.2616E-03  0.0000E+00  1.9521E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  8.3630E-03  0.0000E+00  5.4693E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.0464E-02  0.0000E+00 -7.8962E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.2566E-02  0.0000E+00 -4.3789E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.4667E-02  0.0000E+00 -8.6171E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.6768E-02  0.0000E+00  2.6555E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.6729E-02  0.0000E+00  6.1727E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.4628E-02  0.0000E+00 -7.1927E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.2527E-02  0.0000E+00 -3.6755E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.0425E-02  0.0000E+00 -1.5827E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -8.3241E-03  0.0000E+00  3.3590E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -6.2228E-03  0.0000E+00  6.8762E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -4.1214E-03  0.0000E+00 -6.4893E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -2.0201E-03  0.0000E+00 -2.9720E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  8.1231E-05  0.0000E+00  5.4518E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  2.1826E-03  0.0000E+00  4.0624E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  4.2839E-03  0.0000E+00  7.5796E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  6.3852E-03  0.0000E+00 -5.7858E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  8.4866E-03  0.0000E+00 -2.2686E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.0588E-02  0.0000E+00  1.2486E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.2689E-02  0.0000E+00  4.7659E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.4791E-02  0.0000E+00  8.2831E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.6892E-02  0.0000E+00 -8.4589E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.6606E-02  0.0000E+00 -4.9417E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.4505E-02  0.0000E+00 -1.4245E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.2403E-02  0.0000E+00  2.0928E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.0302E-02  0.0000E+00  5.6100E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -8.2005E-03  0.0000E+00 -7.7555E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -6.0992E-03  0.0000E+00 -4.2383E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -3.9978E-03  0.0000E+00 -7.2102E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.8965E-03  0.0000E+00  2.7962E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  2.0484E-04  0.0000E+00  6.3134E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  2.3062E-03  0.0000E+00 -7.0520E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  4.4075E-03  0.0000E+00 -3.5348E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  6.5089E-03  0.0000E+00 -1.7578E-05  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  8.6102E-03  0.0000E+00  3.4996E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.0712E-02  0.0000E+00  7.0169E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.2813E-02  0.0000E+00 -6.3486E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.4914E-02  0.0000E+00 -2.8314E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.7016E-02  0.0000E+00  6.8587E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.6482E-02  0.0000E+00  4.2031E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.4381E-02  0.0000E+00  7.7203E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.2280E-02  0.0000E+00 -5.6451E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.0178E-02  0.0000E+00 -2.1279E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -8.0769E-03  0.0000E+00  1.3893E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -5.9756E-03  0.0000E+00  4.9065E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -3.8742E-03  0.0000E+00  8.4238E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.7729E-03  0.0000E+00 -8.3182E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  3.2845E-04  0.0000E+00 -4.8010E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  2.4298E-03  0.0000E+00 -1.2838E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  4.5311E-03  0.0000E+00  2.2334E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  6.6325E-03  0.0000E+00  5.7507E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  8.7338E-03  0.0000E+00 -7.6148E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.0835E-02  0.0000E+00 -4.0976E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.2936E-02  0.0000E+00 -5.8033E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.5038E-02  0.0000E+00  2.9369E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.7139E-02  0.0000E+00  6.4541E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.6359E-02  0.0000E+00 -6.9113E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.4257E-02  0.0000E+00 -3.3941E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.2156E-02  0.0000E+00  1.2311E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.0055E-02  0.0000E+00  3.6403E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -7.9533E-03  0.0000E+00  7.1576E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -5.8520E-03  0.0000E+00 -6.2079E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -3.7506E-03  0.0000E+00 -2.6907E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
- -1.6493E-03  0.0000E+00  8.2656E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  4.5206E-04  0.0000E+00  4.3438E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  2.5534E-03  0.0000E+00  7.8610E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  4.6547E-03  0.0000E+00 -5.5045E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  6.7561E-03  0.0000E+00 -1.9872E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  8.8574E-03  0.0000E+00  1.5300E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.0959E-02  0.0000E+00  5.0472E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
-  1.3060E-02  0.0000E+00  8.5645E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  5.0000E-03  0.0000E+00  2.5000E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   3
+  0.0000E+00  0.0000E+00 -2.5000E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   3
+  1.0000E-02  0.0000E+00  5.0000E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   3
+  0.0000E+00  0.0000E+00 -5.0000E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   3
+  1.5000E-02  0.0000E+00  7.5000E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   3
+  0.0000E+00  0.0000E+00 -7.5000E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   3
+ -1.4827E-02  0.0000E+00 -5.0907E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.2717E-02  0.0000E+00 -1.5597E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.0607E-02  0.0000E+00  1.9713E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -8.4975E-03  0.0000E+00  5.5022E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -6.3876E-03  0.0000E+00 -7.9154E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -4.2778E-03  0.0000E+00 -4.3845E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -2.1680E-03  0.0000E+00 -8.5351E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -5.8162E-05  0.0000E+00  2.6774E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  2.0517E-03  0.0000E+00  6.2084E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  4.1615E-03  0.0000E+00 -7.2092E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  6.2713E-03  0.0000E+00 -3.6783E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  8.3811E-03  0.0000E+00 -1.4732E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.0491E-02  0.0000E+00  3.3836E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.2601E-02  0.0000E+00  6.9146E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.4711E-02  0.0000E+00 -6.5030E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.6820E-02  0.0000E+00 -2.9721E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.6813E-02  0.0000E+00  5.5887E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.4703E-02  0.0000E+00  4.0898E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.2593E-02  0.0000E+00  7.6208E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.0483E-02  0.0000E+00 -5.7969E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -8.3733E-03  0.0000E+00 -2.2659E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -6.2635E-03  0.0000E+00  1.2651E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -4.1537E-03  0.0000E+00  4.7960E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -2.0439E-03  0.0000E+00  8.3270E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  6.5945E-05  0.0000E+00 -8.4804E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  2.1758E-03  0.0000E+00 -4.9494E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  4.2856E-03  0.0000E+00 -1.4185E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  6.3954E-03  0.0000E+00  2.1125E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  8.5052E-03  0.0000E+00  5.6434E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.0615E-02  0.0000E+00 -7.7742E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.2725E-02  0.0000E+00 -4.2432E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.4835E-02  0.0000E+00 -7.1227E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.6945E-02  0.0000E+00  2.8187E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.6689E-02  0.0000E+00  6.3496E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.4579E-02  0.0000E+00 -7.0680E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.2469E-02  0.0000E+00 -3.5370E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.0359E-02  0.0000E+00 -6.0834E-06  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -8.2492E-03  0.0000E+00  3.5249E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -6.1394E-03  0.0000E+00  7.0558E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -4.0296E-03  0.0000E+00 -6.3618E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.9198E-03  0.0000E+00 -2.8308E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.9005E-04  0.0000E+00  7.0011E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  2.2999E-03  0.0000E+00  4.2311E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  4.4097E-03  0.0000E+00  7.7620E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  6.5195E-03  0.0000E+00 -5.6556E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  8.6293E-03  0.0000E+00 -2.1247E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.0739E-02  0.0000E+00  1.4063E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.2849E-02  0.0000E+00  4.9373E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.4959E-02  0.0000E+00  8.4682E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.7069E-02  0.0000E+00 -8.3391E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.6564E-02  0.0000E+00 -4.8082E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.4455E-02  0.0000E+00 -1.2772E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.2345E-02  0.0000E+00  2.2537E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.0235E-02  0.0000E+00  5.7847E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -8.1251E-03  0.0000E+00 -7.6330E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -6.0153E-03  0.0000E+00 -4.1020E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -3.9055E-03  0.0000E+00 -5.7104E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.7957E-03  0.0000E+00  2.9599E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  3.1416E-04  0.0000E+00  6.4909E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  2.4240E-03  0.0000E+00 -6.9268E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  4.5338E-03  0.0000E+00 -3.3958E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  6.6436E-03  0.0000E+00  1.3515E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  8.7535E-03  0.0000E+00  3.6661E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.0863E-02  0.0000E+00  7.1971E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.2973E-02  0.0000E+00 -6.2206E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.5083E-02  0.0000E+00 -2.6896E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.7193E-02  0.0000E+00  8.4135E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.6440E-02  0.0000E+00  4.3723E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.4330E-02  0.0000E+00  7.9033E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.2221E-02  0.0000E+00 -5.5144E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.0111E-02  0.0000E+00 -1.9834E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -8.0010E-03  0.0000E+00  1.5475E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -5.8912E-03  0.0000E+00  5.0785E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -3.7814E-03  0.0000E+00  8.6095E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.6716E-03  0.0000E+00 -8.1979E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  4.3827E-04  0.0000E+00 -4.6669E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  2.5481E-03  0.0000E+00 -1.1360E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  4.6579E-03  0.0000E+00  2.3950E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  6.7677E-03  0.0000E+00  5.9259E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  8.8776E-03  0.0000E+00 -7.4917E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.0987E-02  0.0000E+00 -3.9608E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.3097E-02  0.0000E+00 -4.2980E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.5207E-02  0.0000E+00  3.1012E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  1.7317E-02  0.0000E+00  6.6321E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.6316E-02  0.0000E+00 -6.7855E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.4206E-02  0.0000E+00 -3.2546E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.2097E-02  0.0000E+00  2.7639E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -9.9867E-03  0.0000E+00  3.8074E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -7.8769E-03  0.0000E+00  7.3383E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -5.7671E-03  0.0000E+00 -6.0793E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -3.6573E-03  0.0000E+00 -2.5484E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+ -1.5474E-03  0.0000E+00  9.8258E-04  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
+  5.6237E-04  0.0000E+00  4.5135E-03  0.0000E+00  0.0000E+00  0.0000E+00  0.0000E+00 -1.6022E-10   1   5
